<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.3"/>

        <ImageView
            android:id="@+id/imgEdit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/imagefile"
            android:background="@color/blue_sv"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideLine"/>

        <TextView
            android:id="@+id/textName"
            android:text="@string/nome_cliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgEdit"
            android:layout_margin="16dp"
            tools:text="Nome/Cliente"/>


        <TextView
            android:id="@+id/textTipo"
            android:text="@string/tipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textName"
            app:layout_constraintEnd_toEndOf="@id/textName"
            app:layout_constraintStart_toStartOf="@id/textName"
            android:layout_marginTop="8dp"
            tools:text="Tipo"/>

        <TextView
            android:id="@+id/textBoop"
            android:text="@string/acabamento_boop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textTipo"
            app:layout_constraintEnd_toEndOf="@id/textName"
            app:layout_constraintStart_toStartOf="@id/textName"
            android:layout_marginTop="8dp"
            tools:text="Acabamento/Boop"/>

        <TextView
            android:id="@+id/textElastico"
            android:text="@string/cor_elastico"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textBoop"
            app:layout_constraintEnd_toEndOf="@id/textName"
            app:layout_constraintStart_toStartOf="@id/textName"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            tools:text="Elastico/Cor"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
